objects/Visits__c/fields/CTPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>CTPurchaseOrder__c</fullName>
    <label>CTPurchaseOrder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>