objects/Visits__c/fields/CTSignedOff__c.field-meta.xml
<CustomField>
    <fullName>CTSignedOff__c</fullName>
    <label>CTSignedOff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>