objects/Visits__c/fields/CTSupplier__c.field-meta.xml
<CustomField>
    <fullName>CTSupplier__c</fullName>
    <label>CTSupplier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>