objects/Visits__c/fields/CTTotal__c.field-meta.xml
<CustomField>
    <fullName>CTTotal__c</fullName>
    <label>CTTotal</label>
    <type>TextArea</type>
</CustomField>