objects/Visits__c/fields/Current_Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Purchase_Order_No__c</fullName>
    <formula>IF (  Purchase_Order__c &lt;&gt; &quot;&quot;, Purchase_Order__c , 
IF ( Site__r.Current_Purchase_Order_No__c = &quot;&quot;, Site__r.Parent_Purchase_Order_No__c, Site__r.Current_Purchase_Order_No__c

   

))</formula>
    <inlineHelpText>If there is a purchase order number on the Site or Parent, it is here.</inlineHelpText>
    <label>Customer Order Number</label>
    <type>Text</type>
</CustomField>