objects/Visits__c/fields/Customer_Conf_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Conf_Email__c</fullName>
    <description>28/05/14~removed &quot; IF (Site__r.Parent_Invoice_Email_To_formula__c &lt;&gt; &quot;&quot;, Site__r.Parent_Invoice_Email_To_formula__c, &quot; ~WB.</description>
    <formula>IF (Site__r.Visit_Confirmation_Email_to__c &lt;&gt; &quot;&quot;, Site__r.Visit_Confirmation_Email_to__c,
IF (Site__r.Test_Certificate_to_HQ_email__c &lt;&gt; &quot;&quot;, Site__r.Test_Certificate_to_HQ_email__c,
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Confirmation Email to</label>
    <type>Text</type>
</CustomField>