objects/Visits__c/fields/Customer_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Confirmation_Email__c</fullName>
    <label>Customer Confirmation Email</label>
    <type>Email</type>
</CustomField>