objects/Visits__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Site__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>notContain</operation>
            <value>Left the company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits (Customer Contact)</relationshipLabel>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>