objects/Visits__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Date MUST be in this format : DD/MM/YYYY. PLEASE do not create new planned service dates. If this is not working, contact cascloud for support or simply move straight to actual service date, and ignore the planned service date.</inlineHelpText>
    <label>Planned Visit Date</label>
    <referenceTo>Date__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>