objects/Visits__c/fields/Date_Of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Manufacture__c</fullName>
    <formula>IF(
    ISBLANK(Asset__r.Date_Of_Manufacture__c),
    &quot;&quot;,
    TEXT(DAY(Asset__r.Date_Of_Manufacture__c)) + &quot;/&quot; +
    TEXT(MONTH(Asset__r.Date_Of_Manufacture__c)) + &quot;/&quot; +
    TEXT(YEAR(Asset__r.Date_Of_Manufacture__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Manufacture</label>
    <type>Text</type>
</CustomField>