objects/Visits__c/fields/Date_Time_Test__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Test__c</fullName>
    <label>Date Time Test</label>
    <length>100</length>
    <type>Text</type>
</CustomField>