objects/Visits__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <formula>CASE(MOD( Actual_Service_Date__c  - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <type>Text</type>
</CustomField>