objects/Visits__c/fields/Day_Pic__c.field-meta.xml
<CustomField>
    <fullName>Day_Pic__c</fullName>
    <formula>CASE(MOD( Actual_Service_Date__c - DATE(1900, 1, 6), 7), 
0,  IMAGE( &quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 5),
1,  IMAGE( &quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 5),
2,  IMAGE( &quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 10),
3,  IMAGE( &quot;/img/samples/color_green.gif&quot;, &quot;yellow&quot;, 15, 15),
4,  IMAGE( &quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 20),
5,  IMAGE( &quot;/img/samples/color_green.gif&quot;, &quot;yellow&quot;, 15, 25),
6,  IMAGE( &quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 30)
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Pic</label>
    <type>Text</type>
</CustomField>