objects/Visits__c/fields/Default_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Default_Engineer__c</fullName>
    <formula>Site_Contract__r.Technician__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Engineer</label>
    <type>Text</type>
</CustomField>