objects/Visits__c/fields/Early_Morning_OOH__c.field-meta.xml
<CustomField>
    <fullName>Early_Morning_OOH__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you check this box, it will display a warning message in the technician message field indicating this is out of hours and early morning.</inlineHelpText>
    <label>Early Morning OOH</label>
    <type>Checkbox</type>
</CustomField>