objects/Visits__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>If this is a multi-day service, please enter the end date here..</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>