objects/Visits__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <label>End Date / Time</label>
    <type>DateTime</type>
</CustomField>