objects/Visits__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <formula>if(ISBLANK(End_Date__c ),DATETIMEVALUE(Text( Year(Actual_Service_Date__c))+&apos;-&apos;+Text( month(Actual_Service_Date__c))+&apos;-&apos;+Text( day(Actual_Service_Date__c))+&apos; &apos;+&apos;10:00:00&apos;),
DATETIMEVALUE(Text( Year(End_Date__c))+&apos;-&apos;+Text( month(End_Date__c))+&apos;-&apos;+Text( day(End_Date__c))+&apos; &apos;+&apos;10:00:00&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>