objects/Visits__c/fields/End_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Travel_Time__c</fullName>
    <label>End Travel Time</label>
    <type>DateTime</type>
</CustomField>