objects/Visits__c/fields/Engineer2__c.field-meta.xml
<CustomField>
    <fullName>Engineer2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attending Engineer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The user-entered value must match filter criteria.</errorMessage>
        <filterItems>
            <field>Engineer__c.Active_User__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <infoMessage>Value does not exist or does not match filter criteria.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>