objects/Visits__c/fields/Engineer_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Engineer_s_Email_Address__c</fullName>
    <label>Technician&apos;s Email Address</label>
    <type>Email</type>
</CustomField>