objects/Visits__c/fields/Equipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Status__c</fullName>
    <label>Equipment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>