objects/Visits__c/fields/Estimated_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Actual_Cost__c</fullName>
    <inlineHelpText>Auto calculates providing the Estimate Parts Cost and Estimate Labour Cost fields are filled in.</inlineHelpText>
    <label>Estimated Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>