objects/Visits__c/fields/Estimated_GP_Margin__c.field-meta.xml
<CustomField>
    <fullName>Estimated_GP_Margin__c</fullName>
    <inlineHelpText>Auto calculates providing the Order Value and Estimated Actual Cost fields are filled in.</inlineHelpText>
    <label>Estimated GP Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>