objects/Visits__c/fields/Estimated_GP_Margin_Range__c.field-meta.xml
<CustomField>
    <fullName>Estimated_GP_Margin_Range__c</fullName>
    <label>Estimated GP Margin Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>