objects/Visits__c/fields/Estimated_Parts_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Parts_Cost__c</fullName>
    <label>Estimated Parts Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>