objects/Visits__c/fields/FE_Total__c.field-meta.xml
<CustomField>
    <fullName>FE_Total__c</fullName>
    <description>This field pull through the Site Contract FE Total field.</description>
    <label>FE Total</label>
    <length>100</length>
    <type>Text</type>
</CustomField>