objects/Visits__c/fields/FE_Total_Formula__c.field-meta.xml
<CustomField>
    <fullName>FE_Total_Formula__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FE Total</label>
    <type>Text</type>
</CustomField>