objects/Visits__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <label>February</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>