objects/Visits__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>IMAGE( &quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20,  (Actual_Service_Date__c -Today())*10)&amp;
IMAGE( &quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 20,  
IF ( TEXT(End_Date__c) &lt;&gt; &quot;&quot;, End_Date__c - Actual_Service_Date__c , 1 ) * 20)&amp;
IMAGE( &quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, (Today()-Actual_Service_Date__c)*10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>