objects/Visits__c/fields/Finalised__c.field-meta.xml
<CustomField>
    <fullName>Finalised__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When Service check this box, the visit is completed and has been checked</inlineHelpText>
    <label>Finalised</label>
    <type>Checkbox</type>
</CustomField>