objects/Visits__c/fields/Find2__c.field-meta.xml
<CustomField>
    <fullName>Find2__c</fullName>
    <formula>HYPERLINK(
&quot;https://ap2.salesforce.com/00O28000001PDNl?pv0=&quot;&amp;Search_Discipline__c&amp;&quot;&amp;pv1=&quot;&amp;  Search_Postcode__c , &quot;Technicians by Both Postcode &amp; Discipline&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Find</label>
    <type>Text</type>
</CustomField>