objects/Visits__c/fields/Find__c.field-meta.xml
<CustomField>
    <fullName>Find__c</fullName>
    <formula>HYPERLINK(
&quot;https://ap2.salesforce.com/00O28000001PDNk?pv0=&quot;&amp;  Search_Discipline__c, &quot;Technicians by Discipline&quot; ,&quot;_blank&quot;)
&amp;BR()&amp;
HYPERLINK(
&quot;https://ap2.salesforce.com/00O28000001PDNm?pv0=&quot;&amp; Search_Postcode__c , &quot;Technicians by Postcode&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Find</label>
    <type>Text</type>
</CustomField>