objects/Visits__c/fields/Gantt_color__c.field-meta.xml
<CustomField>
    <fullName>Gantt_color__c</fullName>
    <formula>if(Visit_Complete__c,&apos;#2ECC71&apos;,&apos;#0a67ad&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gantt_color</label>
    <type>Text</type>
</CustomField>