objects/Visits__c/fields/GP_Approved__c.field-meta.xml
<CustomField>
    <fullName>GP_Approved__c</fullName>
    <label>GP Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>