objects/Visits__c/fields/GP_Margin_Range__c.field-meta.xml
<CustomField>
    <fullName>GP_Margin_Range__c</fullName>
    <label>Actual GP Margin Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>