objects/Visits__c/fields/Handover_points_to_demonstrate__c.field-meta.xml
<CustomField>
    <fullName>Handover_points_to_demonstrate__c</fullName>
    <label>Handover points to demonstrate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>How to drain and how often</fullName>
            </value>
            <value>
                <fullName>Condensate bottle</fullName>
            </value>
            <value>
                <fullName>Overload reset button</fullName>
            </value>
            <value>
                <fullName>Suction filter</fullName>
            </value>
            <value>
                <fullName>Amalgam alarm</fullName>
            </value>
            <value>
                <fullName>Amalgam pot cleaning(only required if machine alarms)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>