objects/Visits__c/fields/Hire_Equipment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Hire_Equipment_Comments__c</fullName>
    <label>Hire Equipment Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>