objects/Visits__c/fields/Hire_Equipment_Required__c.field-meta.xml
<CustomField>
    <fullName>Hire_Equipment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hire Equipment Required?</label>
    <type>Checkbox</type>
</CustomField>