objects/Visits__c/fields/Image_Plate_Scanner__c.field-meta.xml
<CustomField>
    <fullName>Image_Plate_Scanner__c</fullName>
    <formula>IF(AND(TEXT(Visit_Type__c)  = &quot;Service&quot;,TEXT( Service_Type__c ) = &quot;Image Plate Scanner&quot;),
HYPERLINK (&quot;/a0A/e?CF00N580000064xWJ=&quot;&amp; Name&amp;&quot;&amp;CF00N580000064xWJ_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=%2F&quot;&amp;Id&amp;&quot;&amp;RecordType=0127Z000001GQbu&amp;ent=01I58000000NqwK&amp;CF00N580000064xWH=&quot;&amp; Site__r.Name &amp;&quot;&amp;CF00N580000064xWH_lkid=&quot;&amp;Site__r.Id&amp;&quot;&amp;CF00N580000064xeI=&quot;&amp;Engineer2__r.Name&amp;&quot;&amp;CF00N28000001aGZp_lkid=&quot;&amp;Engineer2__r.Id&amp;&quot;&amp;00N580000064xeD=&quot;&amp; Site__r.Visit_Confirmation_Email_to__c&amp;&quot;&amp;CF00N580000064xiC=&quot;&amp;Site_Contract__r.Name&amp;&quot;&amp;CF00N580000064xiC_lkid=&quot;&amp; Site_Contract__r.Id&amp;&quot;&amp;00N4E000000HrVJ=&quot;&amp; Location__c&amp; &quot;&amp;00N4E000000rqWQ=&quot;&amp; Make__c&amp; &quot;&amp;00N4E000000rqWV=&quot;&amp; Model__c&amp;&quot;&amp;00N4E000000rqWk=&quot;&amp; Serial_Number__c&amp;&quot;&amp;00N4E000000HoNR=&quot;&amp; Date_Of_Manufacture__c,IMAGE(&quot;https://eclipse-dental--unifier--c.sandbox.vf.force.com/resource/1683613033000/ImagePlateService&quot;, &quot;Service&quot;)),IF(AND(TEXT(Visit_Type__c)  = &quot;Installation&quot;,TEXT( Service_Type__c ) = &quot;Image Plate Scanner&quot;),
HYPERLINK (&quot;/a0A/e?CF00N580000064xWJ=&quot;&amp;
Name&amp;&quot;&amp;CF00N580000064xWJ_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=%2F&quot;&amp;Id&amp;&quot;&amp;RecordType=0127Z000001GWCI&amp;ent=01I58000000NqwK&amp;CF00N580000064xWH=&quot;&amp; Site__r.Name &amp;&quot;&amp;CF00N580000064xWH_lkid=&quot;&amp;Site__r.Id&amp;&quot;&amp;CF00N580000064xeI=&quot;&amp;Engineer2__r.Name&amp;&quot;&amp;CF00N28000001aGZp_lkid=&quot;&amp;Engineer2__r.Id&amp;&quot;&amp;00N580000064xeD=&quot;&amp; Site__r.Visit_Confirmation_Email_to__c&amp;&quot;&amp;CF00N580000064xiC=&quot;&amp;Site_Contract__r.Name&amp;&quot;&amp;CF00N580000064xiC_lkid=&quot;&amp; Site_Contract__r.Id&amp;&quot;&amp;00N4E000000HrVJ=&quot;&amp;TEXT(DAY(Actual_Service_Date__c))+ &quot;/&quot; +TEXT(MONTH(Actual_Service_Date__c))+ &quot;/&quot; +TEXT(YEAR(Actual_Service_Date__c))&amp; &quot;&amp;00N4E000000rqWQ=&quot;&amp; Make__c&amp; &quot;&amp;00N4E000000rqWV=&quot;&amp; Model__c&amp;&quot;&amp;00N4E000000rqWk=&quot;&amp; Serial_Number__c&amp;&quot;&amp;00N4E000000HoNR=&quot;&amp; Date_Of_Manufacture__c, 
    IMAGE(&quot;https://eclipse-dental--unifier--c.sandbox.vf.force.com/resource/1683612085000/ImagePlateInstallation&quot;, &quot;Installation&quot;)),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>---</label>
    <type>Text</type>
</CustomField>