objects/Visits__c/fields/Import_No__c.field-meta.xml
<CustomField>
    <fullName>Import_No__c</fullName>
    <label>Import No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>