objects/Visits__c/fields/Internal_Technician_Order__c.field-meta.xml
<CustomField>
    <fullName>Internal_Technician_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Internal / Technician Order that relates to this visit, if applicable.</inlineHelpText>
    <label>Internal / Technician Order</label>
    <referenceTo>Technician_Orders__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>