objects/Visits__c/fields/Invoice_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Opportunity - 1</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visits (Invoice Opportunity)</relationshipLabel>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>