objects/Visits__c/fields/Is_in_a_shopping_centre__c.field-meta.xml
<CustomField>
    <fullName>Is_in_a_shopping_centre__c</fullName>
    <formula>IF ( Site__r.Is_in_a_shopping_centre__c = TRUE,&quot;Yes - &quot;&amp; Site__r.Shopping_Centre_Details__c , &quot;No&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Update this information on the Site so it shows on all visits. Ctrl-Click on the Site.</inlineHelpText>
    <label>Is in a shopping centre ?</label>
    <type>Text</type>
</CustomField>