objects/Visits__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>