objects/Visits__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <label>January</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>