objects/Visits__c/fields/Job_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_Time__c</fullName>
    <description>It pull through the site contract Job Time field.</description>
    <label>Job Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>