objects/Visits__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <label>June</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>