objects/Visits__c/fields/Key_Access_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Key_Access_on_Site__c</fullName>
    <formula>Site__r.Key_Access__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Access on Site</label>
    <type>Checkbox</type>
</CustomField>