objects/Visits__c/fields/LabourItem__c.field-meta.xml
<CustomField>
    <fullName>LabourItem__c</fullName>
    <label>LabourItem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>