objects/Visits__c/fields/LabourPrice__c.field-meta.xml
<CustomField>
    <fullName>LabourPrice__c</fullName>
    <label>LabourPrice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>