objects/Visits__c/fields/LabourQuantity__c.field-meta.xml
<CustomField>
    <fullName>LabourQuantity__c</fullName>
    <label>LabourQuantity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>