objects/Visits__c/fields/LabourSupplier__c.field-meta.xml
<CustomField>
    <fullName>LabourSupplier__c</fullName>
    <label>LabourSupplier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>