objects/Visits__c/fields/LabourTotal__c.field-meta.xml
<CustomField>
    <fullName>LabourTotal__c</fullName>
    <label>LabourTotal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>