objects/Visits__c/fields/LabourTotalCalculation__c.field-meta.xml
<CustomField>
    <fullName>LabourTotalCalculation__c</fullName>
    <label>LabourTotalCalculation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>