objects/Visits__c/fields/Last_Contact_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date_Time__c</fullName>
    <label>Last Contact Date/Time</label>
    <type>DateTime</type>
</CustomField>