objects/Visits__c/fields/Last_Emergency_Lighting_Testing_Duration__c.field-meta.xml
<CustomField>
    <fullName>Last_Emergency_Lighting_Testing_Duration__c</fullName>
    <label>Last Emergency Lighting Testing Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>