objects/Visits__c/fields/Last_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled__c</fullName>
    <formula>Previous_Visit__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Scheduled</label>
    <type>Date</type>
</CustomField>