objects/Visits__c/fields/Last_Submitted_Service_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Last_Submitted_Service_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Submitted Service Sheet</label>
    <referenceTo>Engineer_Checklist__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>