objects/Visits__c/fields/Link_to_Documents__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Documents__c</fullName>
    <inlineHelpText>Enter the link to the Project folder on the server for quick access.</inlineHelpText>
    <label>Link to Documents</label>
    <type>Url</type>
</CustomField>