objects/Visits__c/fields/Locate__c.field-meta.xml
<CustomField>
    <fullName>Locate__c</fullName>
    <formula>HYPERLINK(&quot;/apex/PunchINAndOUTLoc?id=&quot;&amp;Id &amp;&quot;&amp;parentname=&quot;&amp; Name &amp;&quot;&amp;retURL=&quot;&amp;Id &amp;&quot;&amp;PunIN=true&quot;,&quot;Locate&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locate Punch In</label>
    <type>Text</type>
</CustomField>