objects/Visits__c/fields/Locate_Punch_Out__c.field-meta.xml
<CustomField>
    <fullName>Locate_Punch_Out__c</fullName>
    <formula>HYPERLINK(&quot;/apex/PunchINAndOUTLoc?id=&quot;&amp;Id &amp;&quot;&amp;parentname=&quot;&amp; Name &amp;&quot;&amp;retURL=&quot;&amp;Id &amp;&quot;&amp;PunIN=false&quot;,&quot;Locate&quot;)</formula>
    <label>Locate Punch Out</label>
    <type>Text</type>
</CustomField>